--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "fastify": "^1.14.1",
     "google-closure-deps": "^20190121.0.0",
     "recursive-readdir": "^2.2.2",
-    "serve-static": "^1.13.2"
+    "serve-static": "^1.13.2",
+    "strip-json-comments": "^2.0.1"
   },
   "devDependencies": {
     "eslint": "^5.14.1",
