--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "common-tags": "^1.8.0",
     "cors": "^2.8.5",
     "fastify": "^1.14.1",
-    "google-closure-deps": "^20190121.0.0",
+    "google-closure-compiler": ">= 20190215.0.1",
+    "google-closure-deps": ">= 20190121.0.0",
     "recursive-readdir": "^2.2.2",
     "serve-static": "^1.13.2",
     "strip-json-comments": "^2.0.1"
@@ -23,7 +24,6 @@
   "devDependencies": {
     "eslint": "^5.14.1",
     "eslint-config-teppeis": "^9.5.0",
-    "google-closure-compiler": "^20190215.0.1",
     "google-closure-library": "^20190121.0.0",
     "prettier": "^1.16.4"
   },
