--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "array.prototype.flat": "^1.2.1",
     "common-tags": "^1.8.0",
     "cors": "^2.8.5",
-    "fastify": "^1.14.1",
+    "fastify": "^2.0.0",
     "google-closure-compiler": ">= 20190215.0.1",
     "google-closure-deps": ">= 20190121.0.0",
+    "pino-pretty": "^2.5.0",
     "recursive-readdir": "^2.2.2",
     "serve-static": "^1.13.2",
     "strip-json-comments": "^2.0.1"
