--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
   "name": "@teppeis/duck",
+  "description": "Serves and builds an app with Google Closure Compiler/Library/Templates. An alternative to plovr.",
   "version": "1.0.0",
   "author": "Teppei Sato <teppeis@gmail.com>",
   "engines": {
     "node": ">=10.12"
   },
-  "main": "src/index.js",
   "files": [
-    "lib"
+    "lib/src"
   ],
   "scripts": {
     "build": "tsc",
     "clean": "rimraf lib",
-    "lint": "eslint --ext ts src",
-    "start": "node lib/index.js",
-    "test": "run-s lint build"
+    "lint": "eslint --ext js,ts src test",
+    "start": "node lib/src/index.js",
+    "test": "run-s lint build unit",
+    "unit": "mocha -r espower-typescript/guess --extension ts test"
   },
   "dependencies": {
     "array.prototype.flat": "^1.2.1",
@@ -26,18 +27,23 @@
     "pino-pretty": "^2.5.0",
     "recursive-readdir": "^2.2.2",
     "serve-static": "^1.13.2",
-    "strip-json-comments": "^2.0.1"
+    "strip-json-comments": "^2.0.1",
+    "zet": "^1.0.3"
   },
   "devDependencies": {
     "@types/common-tags": "^1.8.0",
+    "@types/mocha": "^5.2.6",
     "@types/node": "^11.9.5",
     "@types/recursive-readdir": "^2.2.0",
     "@types/serve-static": "^1.13.2",
     "@types/strip-json-comments": "0.0.30",
     "eslint": "^5.14.1",
     "eslint-config-teppeis": "^9.5.0",
+    "espower-typescript": "^9.0.1",
     "google-closure-library": "^20190121.0.0",
+    "mocha": "^6.0.2",
     "npm-run-all": "^4.1.5",
+    "power-assert": "^1.6.1",
     "prettier": "^1.16.4",
     "rimraf": "^2.6.3",
     "typescript": "^3.3.3333"
