--- a/examples/configs/package.json
+++ b/examples/configs/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "deps": "closure-make-deps --root js --closure-path node_modules/google-closure-library/closure/goog --no-validate > deps.js",
     "deps:validate": "closure-make-deps --root js --closure-path node_modules/google-closure-library/closure/goog",
-    "start": "node ../../src/index.js duck.config.js",
+    "start": "node ../../lib/index.js duck.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
