--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "node": ">=10.12"
   },
   "main": "src/index.js",
+  "files": [
+    "lib"
+  ],
   "scripts": {
-    "start": "node src/index.js",
-    "test": "eslint src"
+    "build": "tsc",
+    "clean": "rimraf lib",
+    "lint": "eslint --ext ts src",
+    "start": "node lib/index.js",
+    "test": "run-s lint build"
   },
   "dependencies": {
     "array.prototype.flat": "^1.2.1",
@@ -23,10 +29,18 @@
     "strip-json-comments": "^2.0.1"
   },
   "devDependencies": {
+    "@types/common-tags": "^1.8.0",
+    "@types/node": "^11.9.5",
+    "@types/recursive-readdir": "^2.2.0",
+    "@types/serve-static": "^1.13.2",
+    "@types/strip-json-comments": "0.0.30",
     "eslint": "^5.14.1",
     "eslint-config-teppeis": "^9.5.0",
     "google-closure-library": "^20190121.0.0",
-    "prettier": "^1.16.4"
+    "npm-run-all": "^4.1.5",
+    "prettier": "^1.16.4",
+    "rimraf": "^2.6.3",
+    "typescript": "^3.3.3333"
   },
   "homepage": "https://github.com/teppeis/duck",
   "repository": {
