refactor: enable strict in tsconfig

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "build": "tsc",
     "clean": "rimraf lib",
-    "lint": "eslint --ext js,ts src test",
+    "lint": "eslint --ext js,ts src test types",
     "start": "node lib/src/index.js",
     "test": "run-s lint build unit",
     "unit": "mocha -r espower-typescript/guess --extension ts test"
