feat: add bin > duck to package.json

--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "engines": {
     "node": ">=10.12"
   },
+  "bin": {
+    "duck": "bin/duck.js"
+  },
   "files": [
+    "bin",
     "lib/src"
   ],
   "scripts": {
