--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "description": "Serves and builds an app with Google Closure Compiler/Library/Templates. An alternative to plovr.",
   "version": "0.0.1",
   "author": "Teppei Sato <teppeis@gmail.com>",
+  "publishConfig": {
+    "access": "public"
+  },
   "engines": {
     "node": ">=10.12"
   },
