--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "common-tags": "^1.8.0",
     "cors": "^2.8.5",
     "fastify": "^2.0.1",
-    "google-closure-compiler": ">= 20190215.0.2",
-    "google-closure-deps": ">= 20190215.0.0",
+    "google-closure-compiler": ">= 20190121.0.0",
+    "google-closure-deps": ">= 20190121.0.0",
     "pino-pretty": "^2.5.0",
     "recursive-readdir": "^2.2.2",
     "serve-static": "^1.13.2",
@@ -47,7 +47,7 @@
     "eslint": "^5.15.1",
     "eslint-config-teppeis": "^9.5.0",
     "espower-typescript": "^9.0.1",
-    "google-closure-library": "^20190215.0.0",
+    "google-closure-library": ">= 20190121.0.0",
     "mocha": "^6.0.2",
     "npm-run-all": "^4.1.5",
     "power-assert": "^1.6.1",
