--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "build": "tsc",
     "clean": "rimraf lib",
     "lint": "eslint --ext js,ts src test types",
-    "start": "node lib/src/index.js",
     "test": "run-s clean lint build unit",
     "unit": "mocha -r espower-typescript/guess --extension ts test"
   },
@@ -35,6 +34,7 @@
     "recursive-readdir": "^2.2.2",
     "serve-static": "^1.13.2",
     "strip-json-comments": "^2.0.1",
+    "yargs": "^13.2.2",
     "zet": "^1.0.5"
   },
   "devDependencies": {
@@ -44,6 +44,7 @@
     "@types/recursive-readdir": "^2.2.0",
     "@types/serve-static": "^1.13.2",
     "@types/strip-json-comments": "0.0.30",
+    "@types/yargs": "^12.0.9",
     "eslint": "^5.15.1",
     "eslint-config-teppeis": "^9.5.0",
     "espower-typescript": "^9.0.1",
