build: update TypeScript to v3.4 RC

--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "power-assert": "^1.6.1",
     "prettier": "^1.16.4",
     "rimraf": "^2.6.3",
-    "typescript": "^3.3.3333"
+    "typescript": "^3.4.0-rc"
   },
   "homepage": "https://github.com/teppeis/duck",
   "repository": {
