--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "cors": "^2.8.5",
     "fastify": "^2.1.0",
     "google-closure-compiler": ">=20190121.0.0 || ^20190319.0.0-nightly",
-    "google-closure-deps": ">=20190121.0.0",
+    "google-closure-deps": "^20190215.0.0",
     "pino-pretty": "^2.5.0",
     "recursive-readdir": "^2.2.2",
     "serve-static": "^1.13.2",
@@ -50,7 +50,7 @@
     "eslint": "^5.15.3",
     "eslint-config-teppeis": "^9.5.1",
     "espower-typescript": "^9.0.2",
-    "google-closure-library": ">=20190121.0.0",
+    "google-closure-library": "^20190121.0.0",
     "mocha": "^6.0.2",
     "npm-run-all": "^4.1.5",
     "power-assert": "^1.6.1",
