--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
     "teppeis/+mocha"
   ],
   "rules": {
-    "require-await": 0
+    "require-await": 0,
+    "@typescript-eslint/no-object-literal-type-assertion": 0
   }
 }
