--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "fastify": "^2.1.0",
     "google-closure-compiler": ">=20190121.0.0 || ^20190319.0.0-nightly",
     "google-closure-deps": "^20190215.0.0",
+    "p-limit": "^2.2.0",
     "pino-pretty": "^2.5.0",
     "recursive-readdir": "^2.2.2",
     "serve-static": "^1.13.2",
