--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "power-assert": "^1.6.1",
     "prettier": "^1.16.4",
     "rimraf": "^2.6.3",
-    "typescript": "^3.4.0-dev.20190327"
+    "typescript": "^3.4.1"
   },
   "homepage": "https://github.com/teppeis/duck",
   "repository": {
