--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "array.prototype.flat": "^1.2.1",
+    "chokidar": "^2.1.5",
     "common-tags": "^1.8.0",
     "cors": "^2.8.5",
     "execa": "^1.0.0",
@@ -41,6 +42,7 @@
     "zet": "^1.0.5"
   },
   "devDependencies": {
+    "@types/chokidar": "^2.1.3",
     "@types/common-tags": "^1.8.0",
     "@types/execa": "^0.9.0",
     "@types/mocha": "^5.2.6",
