build: disable rules requiring type information
Rules which require type information are too slow.
Dislable them with removing parserOptions > project until the
performance issue is fixed.

Also @see https://github.com/typescript-eslint/typescript-eslint/issues/389

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,11 @@
   ],
   "rules": {
     "require-await": 0,
-    "@typescript-eslint/no-object-literal-type-assertion": 0
+    "@typescript-eslint/no-object-literal-type-assertion": 0,
+    "@typescript-eslint/no-unnecessary-type-assertion": 0,
+    "@typescript-eslint/restrict-plus-operands": 0
+  },
+  "parserOptions": {
+    "project": null
   }
 }
