--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "unit": "mocha -r espower-typescript/guess --extension ts test"
   },
   "dependencies": {
+    "@teppeis/stream-to-observable": "^0.3.1",
     "array.prototype.flat": "^1.2.1",
     "chokidar": "^2.1.5",
     "common-tags": "^1.8.0",
@@ -32,10 +33,15 @@
     "fastify": "^2.3.0",
     "google-closure-compiler": ">=20190325.0.0",
     "google-closure-deps": ">=20190325.0.0",
+    "listr": "^0.14.3",
     "p-limit": "^2.2.0",
+    "p-settle": "^3.1.0",
+    "pino": "^5.12.3",
     "pino-pretty": "^3.0.0",
     "recursive-readdir": "^2.2.2",
+    "rxjs": "^6.5.1",
     "serve-static": "^1.13.2",
+    "split2": "^3.1.1",
     "strip-json-comments": "^2.0.1",
     "tempy": "^0.3.0",
     "yargs": "^13.2.2",
@@ -45,15 +51,18 @@
     "@types/chokidar": "^2.1.3",
     "@types/common-tags": "^1.8.0",
     "@types/execa": "^0.9.0",
+    "@types/listr": "^0.14.0",
     "@types/mocha": "^5.2.6",
     "@types/node": "^10.14.6",
+    "@types/pino": "^5.8.6",
     "@types/recursive-readdir": "^2.2.0",
     "@types/rimraf": "^2.0.2",
     "@types/serve-static": "^1.13.2",
+    "@types/split2": "^2.1.6",
     "@types/strip-json-comments": "0.0.30",
     "@types/yargs": "^13.0.0",
     "eslint": "^5.16.0",
-    "eslint-config-teppeis": "^9.5.1",
+    "eslint-config-teppeis": "^9.6.0",
     "espower-typescript": "^9.0.2",
     "google-closure-library": "^20190301.0.0",
     "mocha": "^6.1.4",
