--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
   "engines": {
     "node": ">=10.12"
   },
+  "main": "lib/compiler.js",
+  "types": "lib/compiler.d.ts",
   "bin": {
     "duck": "bin/duck.js"
   },
   "files": [
     "bin",
-    "lib/src"
+    "lib"
   ],
   "scripts": {
     "build": "tsc",
-    "clean": "rimraf lib",
+    "clean": "rimraf lib .tsbuildinfo",
     "lint": "eslint --ext js,ts src test types",
     "test": "npm-run-all clean -p lint build unit --aggregate-output -l",
     "unit": "mocha -r espower-typescript/guess --extension ts test"
