--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "files": [
     "bin",
-    "lib"
+    "lib",
+    "types/google-closure-deps.d.ts"
   ],
   "scripts": {
     "build": "tsc",
@@ -27,6 +28,7 @@
   },
   "dependencies": {
     "@teppeis/stream-to-observable": "^0.3.1",
+    "@types/pino": "^5.8.7",
     "array.prototype.flat": "^1.2.1",
     "chokidar": "^3.0.0",
     "common-tags": "^1.8.0",
@@ -56,7 +58,6 @@
     "@types/listr": "^0.14.0",
     "@types/mocha": "^5.2.6",
     "@types/node": "^10.14.6",
-    "@types/pino": "^5.8.7",
     "@types/recursive-readdir": "^2.2.0",
     "@types/rimraf": "^2.0.2",
     "@types/serve-static": "^1.13.2",
