build(deps): update typescript to v3.5

--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "power-assert": "^1.6.1",
     "prettier": "^1.17.1",
     "rimraf": "^2.6.3",
-    "typescript": "^3.5.0-rc"
+    "typescript": "^3.5.1"
   },
   "homepage": "https://github.com/teppeis/duck",
   "repository": {
