build: group Google Closure Tools in renovate

--- a/renovate.json
+++ b/renovate.json
@@ -2,6 +2,7 @@
   "extends": ["@teppeis"],
   "packageRules": [
     {
+      "groupName": "Google Closure Tools",
       "packagePatterns": ["^google-closure-"],
       "rangeStrategy": "update-lockfile"
     }
