--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "build": "tsc",
     "clean": "rimraf lib .tsbuildinfo",
     "lint": "eslint --ext js,ts src test types",
-    "test": "npm-run-all clean -p lint build unit -s unit:bin --aggregate-output -l",
-    "unit": "mocha -r espower-typescript/guess --extension ts test",
-    "unit:bin": "mocha test/bin-test"
+    "test": "npm-run-all clean -p lint build -s unit:coverage --aggregate-output -l",
+    "unit": "mocha",
+    "unit:coverage": "nyc mocha"
   },
   "dependencies": {
     "@teppeis/stream-to-observable": "^0.3.1",
@@ -67,12 +67,14 @@
     "@types/split2": "^2.1.6",
     "@types/strip-json-comments": "0.0.30",
     "@types/yargs": "^13.0.0",
+    "codecov": "^3.5.0",
     "eslint": "^5.16.0",
     "eslint-config-teppeis": "^9.6.0",
     "espower-typescript": "^9.0.2",
     "google-closure-library": ">=20190325.0.0",
     "mocha": "^6.1.4",
     "npm-run-all": "^4.1.5",
+    "nyc": "^14.1.1",
     "power-assert": "^1.6.1",
     "prettier": "^1.18.2",
     "rimraf": "^2.6.3",
