--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,22 +18,20 @@ commands:
           name: Test
           command: npm test
       - run:
-          name: Test in Oldest Google Closure Tools
+          name: Test in the oldest Google Closure Tools
           command: |
             CLOSURE_VER=20190325
             npm i "google-closure-compiler@${CLOSURE_VER}" "google-closure-deps@${CLOSURE_VER}" "google-closure-library@${CLOSURE_VER}"
-            npm test
+            npm run unit
+      - run:
+          name: Report coverage to codecov
+          command: npx codecov
       - save_cache:
           key: v{{ .Environment.CIRCLE_CACHE_VERSION }}-{{ arch }}-npm-cache-{{ .Branch }}-{{ .Environment.CIRCLE_JOB }}-{{ checksum "package-lock.json" }}
           paths:
-            - ~/.npm/_cacache
+            - ~/.npm
 
 jobs:
-  node-v8:
-    docker:
-      - image: node:8
-    steps:
-      - test-nodejs
   node-v10:
     docker:
       - image: node:10
