--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "split2": "^3.1.1",
     "strip-json-comments": "^3.0.1",
     "tempy": "^0.3.0",
+    "xmlbuilder": "^13.0.2",
     "yargs": "^13.2.4",
     "zet": "^1.0.5"
   },
