--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "split2": "^3.1.1",
     "strip-json-comments": "^3.0.1",
     "tempy": "^0.3.0",
+    "workerpool": "^3.1.2",
     "xmlbuilder": "^13.0.2",
     "yargs": "^13.2.4",
     "zet": "^1.0.5"
@@ -67,6 +68,7 @@
     "@types/serve-static": "^1.13.2",
     "@types/split2": "^2.1.6",
     "@types/strip-json-comments": "0.0.30",
+    "@types/workerpool": "^2.3.1",
     "@types/yargs": "^13.0.0",
     "codecov": "^3.5.0",
     "eslint": "^5.16.0",
