--- a/package.json
+++ b/package.json
@@ -71,8 +71,8 @@
     "@types/workerpool": "^2.3.1",
     "@types/yargs": "^13.0.0",
     "codecov": "^3.5.0",
-    "eslint": "^5.16.0",
-    "eslint-config-teppeis": "^9.6.0",
+    "eslint": "^6.0.0",
+    "eslint-config-teppeis": "^10.0.0-alpha.7",
     "espower-typescript": "^9.0.2",
     "google-closure-library": ">=20190325.0.0",
     "mocha": "^6.1.4",
