--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "execa": "^1.0.0",
     "faastjs": "^3.0.2",
     "fastify": "^2.5.0",
-    "google-closure-compiler": ">=20190325.0.0",
     "google-closure-deps": ">=20190325.0.0",
     "listr": "^0.14.3",
     "merge-options": "^1.0.1",
@@ -55,6 +54,9 @@
     "xmlbuilder": "^13.0.2",
     "yargs": "^13.2.4",
     "zet": "^1.0.5"
+  },
+  "peerDependencies": {
+    "google-closure-compiler": ">=20180716.0.1"
   },
   "devDependencies": {
     "@types/chokidar": "^2.1.3",
@@ -74,7 +76,7 @@
     "eslint": "^6.0.0",
     "eslint-config-teppeis": "^10.0.0-alpha.7",
     "espower-typescript": "^9.0.2",
-    "google-closure-library": ">=20190325.0.0",
+    "google-closure-compiler": "^20190618.0.0",
     "mocha": "^6.1.4",
     "npm-run-all": "^4.1.5",
     "nyc": "^14.1.1",
