--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,6 +39,7 @@
     // "noFallthroughCasesInSwitch": true,    /* Report errors for fallthrough cases in switch statement. */
 
     /* Module Resolution Options */
+    "resolveJsonModule": true,
     // "moduleResolution": "node",            /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
     "baseUrl": "./",                          /* Base directory to resolve non-absolute module names. */
     "paths": {"*": ["types/*"]},              /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
