--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "pino-pretty": "^3.2.0",
     "recursive-readdir": "^2.2.2",
     "rxjs": "^6.5.2",
+    "semver": "^6.1.1",
     "serve-static": "^1.14.1",
     "split2": "^3.1.1",
     "strip-json-comments": "^3.0.1",
@@ -56,7 +57,7 @@
     "zet": "^1.0.5"
   },
   "peerDependencies": {
-    "google-closure-compiler": ">=20180716.0.1"
+    "google-closure-compiler": ">=20180101.0.0"
   },
   "devDependencies": {
     "@types/chokidar": "^2.1.3",
@@ -67,6 +68,7 @@
     "@types/node": "^10.14.10",
     "@types/recursive-readdir": "^2.2.0",
     "@types/rimraf": "^2.0.2",
+    "@types/semver": "^6.0.1",
     "@types/serve-static": "^1.13.2",
     "@types/split2": "^2.1.6",
     "@types/strip-json-comments": "0.0.30",
