build: fix renovate.json
fixes #130

--- a/renovate.json
+++ b/renovate.json
@@ -2,7 +2,7 @@
   "extends": ["@teppeis:anytime"],
   "packageRules": [
     {
-      "packageName": ["google-closure-deps"],
+      "packageNames": ["google-closure-deps"],
       "rangeStrategy": "update-lockfile"
     }
   ]
