build(renovate): disable anytime

--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["@teppeis:anytime"],
+  "extends": ["@teppeis"],
   "packageRules": [
     {
       "packageNames": ["google-closure-deps"],
