--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "build": "tsc",
     "clean": "rimraf lib .tsbuildinfo",
-    "lint": "eslint --ext js,ts src test types",
+    "lint": "eslint --ext js,ts src test types examples",
     "test": "npm-run-all clean -p lint build -s unit:coverage --aggregate-output -l",
     "unit": "mocha",
     "unit:coverage": "nyc mocha"
