--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,7 +1,9 @@
 comment:
   layout: "diff, files"
 coverage:
-  range: "30...90"
+  range: "40...90"
   status:
-    project: no
+    project:
+      default:
+        target: 40%
     patch: no
