fix: refactor compiler options

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,5 +6,7 @@
     "teppeis/+prettier",
     "teppeis/+mocha"
   ],
-  "rules": {}
+  "rules": {
+    "@typescript-eslint/no-object-literal-type-assertion": "off"
+  }
 }
