--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "execa": "^2.0.4",
     "faastjs": "^3.0.7",
     "fastify": "^2.7.1",
+    "glob": "^7.1.4",
     "google-closure-deps": ">=20190325.0.0",
     "listr": "^0.14.3",
     "merge-options": "^1.0.1",
