--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   "devDependencies": {
     "@types/chokidar": "^2.1.3",
     "@types/common-tags": "^1.8.0",
+    "@types/glob": "^7.1.1",
     "@types/listr": "^0.14.2",
     "@types/mocha": "^5.2.7",
     "@types/node": "^10.14.17",
