--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "execa": "^2.0.4",
     "faastjs": "^3.0.7",
     "fastify": "^2.7.1",
+    "glob": "^7.1.4",
     "google-closure-deps": ">=20190325.0.0",
     "listr": "^0.14.3",
     "merge-options": "^1.0.1",
@@ -62,6 +63,7 @@
   "devDependencies": {
     "@types/chokidar": "^2.1.3",
     "@types/common-tags": "^1.8.0",
+    "@types/glob": "^7.1.1",
     "@types/listr": "^0.14.2",
     "@types/mocha": "^5.2.7",
     "@types/node": "^10.14.18",
