ci: add Node v13 to CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,9 +46,15 @@ jobs:
       - image: node:12
     steps:
       - test-nodejs
+  node-v13:
+    docker:
+      - image: node:13
+    steps:
+      - test-nodejs
 
 workflows:
   node-multi-build:
     jobs:
       - node-v10
       - node-v12
+      - node-v13
