--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,5 @@
     "teppeis/+prettier",
     "teppeis/+mocha"
   ],
-  "rules": {
-    "@typescript-eslint/no-object-literal-type-assertion": "off"
-  }
+  "rules": {}
 }
