--- a/examples/build-and-serve/package.json
+++ b/examples/build-and-serve/package.json
@@ -7,6 +7,7 @@
   },
   "scripts": {
     "build": "duck build",
+    "build:ci": "duck build --batch local -n",
     "serve": "duck serve",
     "start": "run-p static serve",
     "static": "st"
