--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,10 +18,26 @@ commands:
           name: Test
           command: npm test
       - run:
+          name: Test examples
+          command: |
+            cd examples/build-and-serve
+            npm i
+            # npm run build:ci
+      - run:
           name: Test in the oldest Google Closure Tools
           command: |
+            # Run npm install in the child's directory first.
+            # Otherwise, the dependencies of the referenced parent will be restored based on the package-lock.json of the child.
+            cd examples/build-and-serve
+            npm i --no-save google-closure-library@20180910
+            cd ../../
             npm i --no-save google-closure-compiler@20180910 google-closure-deps@20190325
             npm run unit
+      - run:
+          name: Test examples in the oldest Google Closure Tools
+          command: |
+            cd examples/build-and-serve
+            npm run build:ci
       - run:
           name: Report coverage to codecov
           command: |
