--- a/examples/build-and-serve/package.json
+++ b/examples/build-and-serve/package.json
@@ -7,16 +7,16 @@
   },
   "scripts": {
     "build": "duck build",
+    "build:ci": "duck build --batch local -n",
     "serve": "duck serve",
     "start": "run-p static serve",
     "static": "st"
   },
   "dependencies": {
-    "google-closure-library": "^20190325.0.0"
+    "google-closure-library": "^20200101.0.0"
   },
   "devDependencies": {
     "@teppeis/duck": "file:../..",
-    "google-closure-compiler": "^20190325.0.0",
     "npm-run-all": "^4.1.5",
     "st": "^1.2.2"
   },
