fix: "STRICT" is not a valid value for "--dependency_mode" in google-closure-compiler@20200101 (#361)
disable lock-file in examples

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,21 +22,17 @@ commands:
           command: |
             cd examples/build-and-serve
             npm i
-            # npm run build:ci
+            npm run build:ci
       - run:
           name: Test in the oldest Google Closure Tools
           command: |
-            # Run npm install in the child's directory first.
-            # Otherwise, the dependencies of the referenced parent will be restored based on the package-lock.json of the child.
-            cd examples/build-and-serve
-            npm i --no-save google-closure-library@20180910
-            cd ../../
             npm i --no-save google-closure-compiler@20180910 google-closure-deps@20190325
-            npm run unit
+            OLDEST_COMPILER=1 npm run unit
       - run:
           name: Test examples in the oldest Google Closure Tools
           command: |
             cd examples/build-and-serve
+            npm i --no-save google-closure-library@20180910
             npm run build:ci
       - run:
           name: Report coverage to codecov
