--- a/.mocharc.json
+++ b/.mocharc.json
@@ -1,5 +1,6 @@
 {
   "require": ["espower-typescript/guess"],
   "extension": ["ts"],
-  "spec": ["test", "test/bin-test"]
+  "spec": ["test", "test/bin-test"],
+  "watch-files": ["src", "test", "types"]
 }
