--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@teppeis/duck",
+  "name": "@cybozu/duck",
   "description": "Serves and builds an app with Google Closure Compiler/Library/Templates. An alternative to plovr.",
   "version": "0.32.1",
-  "author": "Teppei Sato <teppeis@gmail.com>",
+  "author": "Cybozu, Inc.",
   "publishConfig": {
     "access": "public"
   },
