--- a/examples/build-and-serve/package.json
+++ b/examples/build-and-serve/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chunks",
   "version": "1.0.0",
-  "author": "Teppei Sato <teppeis@gmail.com>",
+  "author": "Cybozu, Inc.",
   "engines": {
     "node": ">=10.12"
   },
@@ -16,7 +16,7 @@
     "google-closure-library": "^20200101.0.0"
   },
   "devDependencies": {
-    "@teppeis/duck": "file:../..",
+    "@cybozu/duck": "file:../..",
     "npm-run-all": "^4.1.5",
     "st": "^1.2.2"
   },
