--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,19 @@
 {
-  "extends": [
-    "teppeis/es2019",
-    "teppeis/+node",
-    "teppeis/+typescript",
-    "teppeis/+prettier",
-    "teppeis/+mocha"
-  ],
-  "rules": {}
+  "extends": "@cybozu/eslint-config/presets/node-typescript-prettier",
+  "env": {
+    "mocha": true
+  },
+  "globals": {
+    "describe": "readonly",
+    "it": "readonly"
+  },
+  "rules": {
+    "no-process-exit": "off",
+    "no-shadow": "off",
+    "default-param-last": "off",
+    "no-param-reassign": "off",
+    "@typescript-eslint/no-empty-function": "off",
+    "@typescript-eslint/class-name-casing": "off",
+    "node/no-exports-assign": "off"
+  }
 }
