--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "google-closure-compiler": ">=20180910.1.0"
   },
   "devDependencies": {
+    "@cybozu/eslint-config": "^10.0.0",
     "@types/common-tags": "^1.8.0",
     "@types/glob": "^7.1.1",
     "@types/listr": "^0.14.2",
@@ -75,13 +76,13 @@
     "@types/yargs": "^15.0.3",
     "codecov": "^3.6.5",
     "eslint": "^6.8.0",
-    "eslint-config-teppeis": "^11.0.0",
     "espower-typescript": "^9.0.2",
     "google-closure-compiler": "^20200112.0.0",
     "mocha": "^7.0.1",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.0.0",
     "power-assert": "^1.6.1",
+    "prettier": "^1.19.1",
     "rimraf": "^3.0.1",
     "typescript": "^3.7.5"
   },
