fix: eslintrc in examples

--- a/examples/build-deps/.eslintrc.json
+++ b/examples/build-deps/.eslintrc.json
@@ -1,9 +1,7 @@
 {
-  "extends": [
-    "teppeis/+closure"
-  ],
   "globals": {
-    "app": true
+    "app": true,
+    "goog": "readonly"
   },
   "overrides": [
     {
