--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@types/yargs": "^15.0.4",
     "codecov": "^3.6.5",
     "eslint": "^6.8.0",
+    "eslint-config-teppeis": "^11.0.1",
     "espower-typescript": "^9.0.2",
     "google-closure-compiler": "^20200112.0.0",
     "mocha": "^7.1.0",
