deps: remove eslint-config-teppeis

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,5 @@
 {
-  "extends": [
-    "teppeis/node-v10",
-    "@cybozu/eslint-config/presets/node-typescript-prettier"
-  ],
+  "extends": "@cybozu/eslint-config/presets/node-typescript-prettier",
   "env": {
     "mocha": true
   },
