--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@types/split2": "^2.1.6",
     "@types/workerpool": "^5.0.2",
     "@types/yargs": "^15.0.5",
+    "codecov": "^3.7.0",
     "eslint": "^7.3.1",
     "espower-typescript": "^9.0.2",
     "google-closure-compiler": "^20200315.0.0",
