build: set CODECOV_TOKEN from secrets

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,5 +40,7 @@ jobs:
         npm run build:ci 
     - name: Report coverage to codecov
       if: matrix.node-version == '12.x'
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       run: npx codecov
 
