chore: fix the way to use cybozu/renovate-config

--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["@cybozu"],
+  "extends": ["github>cybozu/renovate-config"],
   "packageRules": [
     {
       "packageNames": ["google-closure-deps"],
