--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "scripts": {
     "build": "tsc",
     "clean": "rimraf lib .tsbuildinfo",
-    "lint": "eslint --ext js,ts src test types examples",
+    "lint": "run-p lint:*",
+    "lint:tsc": "tsc --noEmit",
+    "lint:eslint": "eslint --ext js,ts src test types examples",
     "test": "npm-run-all clean -p lint build -s unit:coverage --aggregate-output -l",
     "unit": "mocha --timeout 10000",
     "unit:coverage": "nyc mocha --timeout 10000",
