--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,9 @@
     "no-param-reassign": "off",
     "@typescript-eslint/no-empty-function": "off",
     "@typescript-eslint/class-name-casing": "off",
-    "node/no-exports-assign": "off"
+    "node/no-exports-assign": "off",
+    "consistent-return": "off",
+    "max-statements": "off",
+    "no-invalid-this": "off"
   }
 }
