--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lint": "run-p lint:*",
     "lint:tsc": "tsc --noEmit",
     "lint:eslint": "eslint --ext js,ts src test types examples",
+    "fix": "npm run lint:eslint -- --fix",
     "test": "npm-run-all clean -p lint build -s unit:coverage --aggregate-output -l",
     "unit": "mocha --timeout 10000",
     "unit:coverage": "nyc mocha --timeout 10000",
