--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "access": "public"
   },
   "engines": {
-    "node": "^10.17.0 || >=11.14"
+    "node": ">=12"
   },
   "main": "lib/compiler.js",
   "types": "lib/compiler.d.ts",
