--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "cors": "^2.8.5",
     "execa": "^5.0.0",
     "faastjs": "^5.4.5",
+    "fast-glob": "^3.2.7",
     "fastify": "^2.15.3",
-    "glob": "^7.1.7",
     "google-closure-deps": ">=20190325.0.0 <=20191027.0.0 || >=20191111.0.0",
     "listr": "^0.14.3",
     "merge-options": "^3.0.4",
