--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "prettier": "2.7.1",
     "rimraf": "^3.0.2",
     "standard-version": "^9.3.2",
-    "typescript": "^4.2.4"
+    "typescript": "~4.5.5"
   },
   "homepage": "https://github.com/cybozu/duck",
   "repository": {
