fix(deps): update fastify to v3

--- a/package.json
+++ b/package.json
@@ -33,15 +33,16 @@
     "release:dryrun": "standard-version --dry-run"
   },
   "dependencies": {
+    "@fastify/cors": "^7.0.0",
+    "@fastify/static": "^5.0.2",
     "@teppeis/stream-to-observable": "^0.3.1",
     "@types/pino": "^6.3.12",
     "chokidar": "^3.5.3",
     "common-tags": "^1.8.2",
-    "cors": "^2.8.5",
     "execa": "^5.1.1",
     "faastjs": "^3.1.5",
     "fast-glob": "^3.2.11",
-    "fastify": "^2.15.3",
+    "fastify": "^3.29.1",
     "google-closure-deps": ">=20210406.0.0",
     "listr": "^0.14.3",
     "merge-options": "^3.0.4",
@@ -51,7 +52,6 @@
     "recursive-readdir": "^2.2.2",
     "rxjs": "^6.6.7",
     "semver": "^7.3.7",
-    "serve-static": "^1.15.0",
     "split2": "^3.2.2",
     "strip-json-comments": "^3.1.1",
     "tempy": "^1.0.1",
@@ -72,7 +72,6 @@
     "@types/recursive-readdir": "^2.2.1",
     "@types/rimraf": "^3.0.2",
     "@types/semver": "^7.3.10",
-    "@types/serve-static": "^1.15.0",
     "@types/split2": "^3.2.1",
     "@types/workerpool": "^6.1.0",
     "@types/yargs": "^15.0.14",
