--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "@types/yargs": "^17.0.10",
     "codecov": "^3.8.3",
     "eslint": "^8.20.0",
-    "espower-typescript": "^10.0.0",
+    "espower-typescript": "^10.0.1",
     "google-closure-compiler": "^20220719.0.0",
     "mocha": "^10.0.0",
     "npm-run-all": "^4.1.5",
@@ -85,7 +85,7 @@
     "prettier": "2.7.1",
     "rimraf": "^3.0.2",
     "standard-version": "^9.3.2",
-    "typescript": "~4.5.5"
+    "typescript": "^4.7.4"
   },
   "homepage": "https://github.com/cybozu/duck",
   "repository": {
