chore!: migrate to ESM

--- a/examples/build-and-serve/package.json
+++ b/examples/build-and-serve/package.json
@@ -5,6 +5,7 @@
   "engines": {
     "node": ">=10.12"
   },
+  "type": "commonjs",
   "scripts": {
     "build": "duck build",
     "build:ci": "duck build --batch local -n",
