--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "build": "tsc",
     "clean": "rimraf dist lib .tsbuildinfo",
     "lint": "run-p lint:*",
-    "lint:tsc": "tsc --noEmit",
+    "lint:tsc": "tsc -p tsconfig.test.json",
     "lint:eslint": "eslint --ext js,ts src test types examples",
     "fix": "npm run lint:eslint -- --fix",
     "test": "npm-run-all clean -p lint build -s unit:coverage --aggregate-output -l",
-    "unit": "mocha --timeout 10000",
-    "unit:coverage": "nyc mocha --timeout 10000",
+    "unit": "vitest run",
+    "unit:coverage": "vitest run --coverage",
     "release": "run-s build lint && standard-version",
     "release:dryrun": "standard-version --dry-run"
   },
@@ -66,7 +66,6 @@
     "@cybozu/eslint-config": "^17.0.3",
     "@types/common-tags": "^1.8.1",
     "@types/listr": "^0.14.4",
-    "@types/mocha": "^9.1.1",
     "@types/node": "^16.11.47",
     "@types/recursive-readdir": "^2.2.1",
     "@types/rimraf": "^3.0.2",
@@ -74,18 +73,17 @@
     "@types/split2": "^3.2.1",
     "@types/workerpool": "^6.1.0",
     "@types/yargs": "^17.0.11",
-    "codecov": "^3.8.3",
+    "c8": "^7.12.0",
     "eslint": "^8.21.0",
-    "espower-typescript": "^10.0.1",
     "google-closure-compiler": "^20220719.0.0",
-    "mocha": "^10.0.0",
     "npm-run-all": "^4.1.5",
-    "nyc": "^15.1.0",
     "power-assert": "^1.6.1",
     "prettier": "2.7.1",
     "rimraf": "^3.0.2",
     "standard-version": "^9.3.2",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "vite": "^3.0.4",
+    "vitest": "^0.21.0"
   },
   "homepage": "https://github.com/cybozu/duck",
   "repository": {
