--- a/examples/build-deps/package.json
+++ b/examples/build-deps/package.json
@@ -8,13 +8,13 @@
     "deps": "duck build:deps",
     "clean": "duck clean:deps",
     "closure-make-deps": "closure-make-deps --root js --exclude node_modules --exclude build --closure-path node_modules/google-closure-library/closure/goog --no-validate > build/closure-make-deps.deps.js",
-    "closure-make-deps:validate": "closure-make-deps --root js --exclude build --closure-path node_modules/google-closure-library/closure/goog"
+    "closure-make-deps:validate": "closure-make-deps --root js --exclude build --closure-path node_modules/google-closure-library/closure/goog",
+    "test": "npm run deps"
   },
   "keywords": [],
   "license": "MIT",
   "devDependencies": {
     "@cybozu/duck": "file:../..",
-    "google-closure-deps": "^20220719.0.0",
     "google-closure-library": "^20220719.0.0"
   }
 }
