--- a/examples/build-soy/package.json
+++ b/examples/build-soy/package.json
@@ -8,7 +8,8 @@
     "deps": "duck build:deps",
     "clean": "duck clean:deps",
     "closure-make-deps": "closure-make-deps --root js --exclude node_modules --exclude build --closure-path node_modules/google-closure-library/closure/goog --no-validate > build/closure-make-deps.deps.js",
-    "closure-make-deps:validate": "closure-make-deps --root js --exclude build --closure-path node_modules/google-closure-library/closure/goog"
+    "closure-make-deps:validate": "closure-make-deps --root js --exclude build --closure-path node_modules/google-closure-library/closure/goog",
+    "test": "npm run deps"
   },
   "keywords": [],
   "license": "MIT",
