test(examples): add engines to package.json

--- a/examples/build-deps/package.json
+++ b/examples/build-deps/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "author": "Cybozu, Inc.",
   "type": "commonjs",
+  "engines": {
+    "node": ">=16"
+  },
   "main": "index.js",
   "scripts": {
     "deps": "duck build:deps",
