--- a/examples/build-soy/package.json
+++ b/examples/build-soy/package.json
@@ -2,6 +2,9 @@
   "name": "build-deps",
   "version": "1.0.0",
   "author": "Cybozu, Inc.",
+  "engines": {
+    "node": ">=16"
+  },
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
