--- a/examples/build-deps/package.json
+++ b/examples/build-deps/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "closure-scripts",
+  "name": "build-deps",
   "version": "1.0.0",
   "author": "Cybozu, Inc.",
   "type": "commonjs",
+  "engines": {
+    "node": ">=16"
+  },
   "main": "index.js",
   "scripts": {
     "deps": "duck build:deps",
-    "closure-make-deps": "closure-make-deps --root . --exclude node_modules --exclude build --closure-path node_modules/google-closure-library/closure/goog --no-validate > build/closure-make-deps.deps.js",
-    "closure-make-deps:validate": "closure-make-deps --root . --exclude build --closure-path node_modules/google-closure-library/closure/goog"
+    "clean": "duck clean:deps",
+    "closure-make-deps": "closure-make-deps --root js --exclude node_modules --exclude build --closure-path node_modules/google-closure-library/closure/goog --no-validate > build/closure-make-deps.deps.js",
+    "closure-make-deps:validate": "closure-make-deps --root js --exclude build --closure-path node_modules/google-closure-library/closure/goog",
+    "test": "npm run deps"
   },
   "keywords": [],
   "license": "MIT",
   "devDependencies": {
     "@cybozu/duck": "file:../..",
-    "google-closure-deps": "^20220502.0.0",
-    "google-closure-library": "^20200101.0.0"
+    "google-closure-library": "^20220719.0.0"
   }
 }
