--- a/package.json
+++ b/package.json
@@ -74,12 +74,10 @@
     "@types/split2": "^3.2.1",
     "@types/workerpool": "^6.1.0",
     "@types/yargs": "^17.0.13",
-    "@vitest/coverage-c8": "^0.33.0",
-    "c8": "^7.12.0",
+    "@vitest/coverage-v8": "^0.34.2",
     "eslint": "^8.47.0",
     "google-closure-compiler": "^20220803.0.0",
     "npm-run-all": "^4.1.5",
-    "power-assert": "^1.6.1",
     "prettier": "2.8.8",
     "rimraf": "^3.0.2",
     "standard-version": "^9.3.2",
