--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "eslint": "^8.47.0",
     "google-closure-compiler": "^20220803.0.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "2.8.8",
+    "prettier": "^3.0.2",
     "rimraf": "^3.0.2",
     "standard-version": "^9.3.2",
     "typescript": "^4.8.4",
