--- a/examples/.eslintrc.json
+++ b/examples/.eslintrc.json
@@ -7,11 +7,12 @@
   "rules": {
     "dot-notation": "off",
     "node/no-exports-assign": "off",
-    "node/no-unsupported-features/es-syntax": "off"
+    "node/no-unsupported-features/es-syntax": "off",
+    "node/no-unsupported-features/node-builtins": "off"
   },
   "overrides": [
     {
-      "files": ["./build-deps/esm*.js"],
+      "files": ["./build-deps/js/esm*.js"],
       "parserOptions": {
         "sourceType": "module"
       }
