--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "access": "public"
   },
   "engines": {
-    "node": ">=16"
+    "node": ">=18.17"
   },
   "type": "module",
   "main": "dist/compiler.js",
@@ -68,7 +68,7 @@
     "@cybozu/eslint-config": "^22.0.0",
     "@types/common-tags": "^1.8.1",
     "@types/listr": "^0.14.4",
-    "@types/node": "^16.18.46",
+    "@types/node": "~18.17.11",
     "@types/recursive-readdir": "^2.2.1",
     "@types/rimraf": "^4.0.5",
     "@types/semver": "^7.5.0",
