--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
-    "lib": ["es2021"],
-    "target": "es2021",
+    "lib": ["ES2023"],
+    "target": "ES2022",
     "module": "Node16",
     "moduleResolution": "Node16",
     "esModuleInterop": true,
