chore: cleanup disabled rules in .eslintrc

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,17 +2,10 @@
   "extends": "@cybozu/eslint-config/presets/node-typescript-prettier",
   "root": true,
   "rules": {
-    "no-process-exit": "off",
-    "no-shadow": "off",
     "default-param-last": "off",
     "no-param-reassign": "off",
-    "@typescript-eslint/consistent-type-imports": "error",
     "@typescript-eslint/no-empty-function": "off",
-    "@typescript-eslint/class-name-casing": "off",
-    "node/no-exports-assign": "off",
     "node/no-missing-import": "off",
-    "consistent-return": "off",
-    "max-statements": "off",
-    "no-invalid-this": "off"
+    "max-statements": "off"
   }
 }
