--- a/examples/build-deps/package.json
+++ b/examples/build-deps/package.json
@@ -6,15 +6,14 @@
   "main": "index.js",
   "scripts": {
     "deps": "duck build:deps",
-    "clean": "duck clean:deps",
-    "closure-make-deps": "closure-make-deps --root js --exclude node_modules --exclude build --closure-path node_modules/google-closure-library/closure/goog --no-validate > build/closure-make-deps.deps.js",
-    "closure-make-deps:validate": "closure-make-deps --root js --exclude build --closure-path node_modules/google-closure-library/closure/goog",
+    "clean": "rimraf build",
+    "closure-make-deps": "closure-make-deps --root js --closure-path node_modules/google-closure-library/closure/goog --file node_modules/google-closure-library/closure/goog/deps.js > build/closure-make-deps.deps.js",
     "test": "npm run deps"
   },
   "keywords": [],
   "license": "MIT",
   "devDependencies": {
     "@cybozu/duck": "file:../..",
-    "google-closure-library": "^20220719.0.0"
+    "google-closure-library": "^20230802.0.0"
   }
 }
